# pyboss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  PyBoss.py  README.md  bot-config.toml  database.py  docker-compose.yaml  docker-compose.yml  log-config.toml  requirements.txt  setup.cfg  setup.py
bot/: __init__.py  __main__.py  logging-config.toml  models.py
bot/cogs/: commands.py  events.py  music.py  quiz.py  roles.py  schedule.py  suggestions.py
bot/cogs/utils/: checkers.py  schedule.py  youtube.py
bot/controllers/: member.py
bot/static/text/: agenda_rules.md
bot/utils/: database.py  resolver.py
cogs/: commands.py  events.py  music.py  planningAndAgenda.py  quiz.py  roles.py  suggestions.py
models/: member.py  modMember.py
pyboss/: __init__.py  __main__ .py  __main__.py  bot.py  models.py
pyboss/cogs/: commands.py  errors.py  events.py  music.py  quiz.py  roles.py  schedule.py  suggestions.py
pyboss/cogs/schedule/: checks.py  schedule.py
pyboss/cogs/utils/: checkers.py  functions.py  schedule.py  youtube.py
pyboss/controllers/: guild.py  member.py  message.py
pyboss/static/json/: letters_emojis.json  matters_wordlist.json
pyboss/static/text/: DM_choice_roles_G1.md
pyboss/utils/: checkers.py  database.py  music.py  resolver.py  schedule.py
pyboss/wrappers/: guild.py  member.py  message.py
static/json/: channels_tables.json  matters_wordlist.json  members_sub_roles.json  messages_id.json  reacts_pairs.json
static/text/: DM_choice_categories.md  DM_choice_roles_G2.md  guild_choice.md  suggestions_rules.md
static/txt/: DM_choice_categories.txt  DM_choice_roles_G1.txt  DM_choice_roles_G2.txt  agenda_rules.txt  guild_choice.txt  planning_rules.txt  suggestions_rules.txt
utils/: database.py
