[metadata]
name = PyBoss
version = 2.1
description = A Discord bot
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Adrien jayat
url = https://github.com/Adridri24/PyBoss
project_urls =
   Issue Tracker = https://github.com/Adridri24/PyBoss/issues
   Source Code = https://github.com/Adridri24/PyBoss
classifiers =
   Development Status :: Development
   Natural Language :: English
   Operating System :: MacOS :: MacOS X
   Operating System :: Microsoft :: Windows
   Operating System :: POSIX :: Linux
   Programming Language :: Python :: 3.9
   Topic :: Communications :: Chat
license_files =
   LICENSE

[options]
packages = find_namespace:
python_requires = >=3.9,<3.10
include_package_data = True
install_requires =
   discord.py>=1.7,<2.0
   mysql-connector-python>=8.0,<9.0
   pre-commit>2.11,<3.0
   PyNaCl>=1.4,<2
   python-dotenv<1.0
   PyYAML>5.4,<6.0
   youtube-dl>=2021,<2022
   google-api-python-client>=2.1,<3.0
   cached-property>=1.5.2,<2.0
   sqlalchemy>=1.4.7,<2.0

[options.entry_points]
console_scripts =
   bot=bot.__main__:main

[options.packages.find]
include =
   bot
   bot/*

[isort]
profile = black